2012-05-16  Niibe Yutaka  <gniibe@fsij.org>

	* tool/gnuk_put_binary.py (main): Fix fileid.
	* tool/gnuk_put_binary_libusb.py: Ditto.

	* src/openpgp.c (FILE_EF_RANDOM): Remove.
	(cmd_update_binary, cmds): ifdef CERTDO_SUPPORT.
	(cmd_write_binary): Fix fileid.

	* src/flash.c (flash_check_blank): Always enable.
	(flash_erase_binary): ifdef CERTDO_SUPPORT.
	(flash_write_binary): Call flash_check_blank.

2012-05-15  Niibe Yutaka  <gniibe@fsij.org>

	* Version 0.18.

	* src/usb_desc.c (gnukStringSerial): Updated.

	* src/main.c (EP3_IN_Callback, EP5_OUT_Callback): Move from
	usb_endp.c.

	* src/usb_endp.c: Remove.

2012-05-14  Niibe Yutaka  <gniibe@fsij.org>

	* tool/gnuk_remove_keys.py: New.

	* src/openpgp-do.c (proc_key_import): Fix checking extended header.

	* src/hardclock.c: Remove.

	* src/usb_prop.c (MSC_INTERFACE_NO): New.
	(gnuk_setup_endpoints_for_interface): Cleanup with MSC_INTERFACE_NO.
	(gnuk_setup_with_data, gnuk_setup_with_nodata): Likewise.

	* src/usb-msc.c: Rename from usb_msc.c.

	* src/usb-msc.h: Rename from usb_msc.h.

	* src/Makefile.in: Follow the rename of usb-msc.c and remove of
	hardclock.c.

	* src/pin-dnd.c, src/usb_prop.c: Follow the rename of usb-msc.h.

2012-05-12  Niibe Yutaka  <gniibe@fsij.org>

	* src/usb_msc.c (ep6_out): Rename (was: ep7_out).
	(usb_start_receive): Use ep6_out and ENDP6.
	(EP6_OUT_Callback): Rename (was: EP7_OUT_Callback).
	Use ep6_out and ENDP6.
	(msc_handle_command): Use ep6_out and ENDP6.

	* src/main.c (main): Wait USB reset.

	* src/usb-icc.c (EP1_OUT_Callback): Rename from EP2_OUT_Callback.
	(USBthread): Use ENDP1 for both of epi_init and epo_init.

	* src/usb_conf.h (ENDP1_RXADDR, ENDP2_TXADDR, ENDP6_RXADDR): New.
	(ENDP3_TXADDR, ENDP4_TXADDR, ENDP5_RXADDR): New value.
	(ENDP7_RXADDR): Remove.

	* src/usb_desc.c (gnukConfigDescriptor): Use endpoint OUT1 (was
	IN2), endpoint OUT6 (IN7).

	* src/usb_prop.c (gnuk_setup_endpoints_for_interface): Use ENDP1
	and ENDP6 for both directions.
