@@ -1,3 +1,12 @@
+2012-05-17  Niibe Yutaka  <gniibe@fsij.org>
+
+	* src/usb_lld.c (LAST_OUT_DATA): Remove.
+	(handle_datastage_out): Cleanup and call st103_ep_set_rxtx_status.
+	(handle_datastage_in): Call st103_ep_set_rxtx_status and
+	st103_ep_set_tx_status.
+	(handle_setup0): Likewise.
+	(handle_out0): Remove LAST_OUT_DATA.
+
 2012-05-16  Niibe Yutaka  <gniibe@fsij.org>
 
 	* tool/gnuk_put_binary.py (main): Fix fileid.
